End of Section 3

--- a/DatingApp.API/Properties/launchSettings.json
+++ b/DatingApp.API/Properties/launchSettings.json
@@ -20,8 +20,8 @@
     "DatingApp.API": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:5001",
+      "launchUrl": "datingApp",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
