Setting MySql database to Development environment.

--- a/DatingApp.API/appsettings.Development.json
+++ b/DatingApp.API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings" : {
-    "DefaultConnection": "Data Source=datingapp.db"
+    "DefaultConnection": "Server=localhost;Database=datingapp;Uid=root;Pwd=admin123;",
+    "DefaultConnection1": "Data Source=datingapp.db"
   },
   "Logging": {
     "LogLevel": {
